# augmented_perception

./: CMakeLists.txt  LICENSE  README.md  point_grey_camera.cpp  worklog  worklog.md
augmented_perception/: .gitignore  CMakeLists.txt  package.xml
augmented_perception/cameraParams/: 0.yaml
augmented_perception/config/: calib.rviz  detect.rviz  rviz.rviz
augmented_perception/datasets/: 1523368715.txt  1524060186.txt  a25_v1.txt  a25_v2_1.txt  alboi_auto.txt  alboi_manual.txt  example.txt  example_v2.txt  example_v2_1.txt
augmented_perception/launch/: ball_detection_playback.launch  calibration_playback.launch  labelling.launch  static_transform_publisher.launch  tf_calibration_pcl.launch
augmented_perception/src/: ball_detection_node.cpp  car_detection_node.cpp  chessboard.cpp  common.cpp  dataset_playback_node.cpp  dataset_stats.py  experiment.cpp  labelling_node.cpp  rosbag_player_node.cpp
calibration_gui/calib_results/04-07-2017_00-21-50/: ldmrs_1.pcd  vlp16_1.pcd
calibration_gui/calib_results/08-03-2017_19-15-55/: ldmrs_1.pcd
calibration_gui/calib_results/08-06-2017_12-25-15/: ldmrs_1.pcd
calibration_gui/calib_results/08-06-2017_12-25-48/: ldmrs_1.pcd
calibration_gui/calib_results/08-06-2017_12-28-50/: ldmrs_1.pcd  lms151_1.pcd  lms151_2.pcd
calibration_gui/calib_results/12-03-2018_15-20-06/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/12-03-2018_15-20-52/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/13-03-2018_14-24-37/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/13-03-2018_14-37-25/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/13-03-2018_14-39-52/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/13-03-2018_15-16-00/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/13-03-2018_15-35-41/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/13-03-2018_15-41-42/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/13-03-2018_15-46-32/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/13-03-2018_15-51-02/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/13-03-2018_16-05-56/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/13-03-2018_20-43-15/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/13-03-2018_23-03-17/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/14-03-2018_13-23-27/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/14-03-2018_14-18-11/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/14-03-2018_14-53-58/: pointgrey_1.pcd  pointgrey_1_PnP.pcd
calibration_gui/calib_results/14-03-2018_14-56-50/: lms151_1.pcd
calibration_gui/calib_results/14-03-2018_15-02-53/: lms151_1.pcd  lms151_2.pcd
calibration_gui/calib_results/14-03-2018_15-05-54/: lms151_1.pcd  lms151_1_lms151_2_calib.txt  lms151_2.pcd
calibration_gui/calib_results/14-03-2018_15-16-06/: lms151_1.pcd  lms151_1_lms151_2_calib.txt  lms151_2.pcd
calibration_gui/calib_results/14-03-2018_15-23-54/: lms151_1.pcd  lms151_1_lms151_2_calib.txt  lms151_1_pointgrey_1_calib.txt  lms151_2.pcd  (+2 more)
calibration_gui/calibration_gui/: CMakeLists.txt  package.xml
calibration_gui/calibration_gui/include/calibration_gui/: common_functions.h  kinect.h  velodyne_vlp16.h  visualization_rviz_kinect.h  visualization_rviz_swissranger.h  visualization_rviz_velodyne.h
calibration_gui/calibration_gui/intrinsic_calibrations/: ros_calib.yaml
calibration_gui/calibration_gui/intrinsic_calibrations/Zebra2Intrinsics/: ost.txt  ost.yaml
calibration_gui/calibration_gui/intrinsic_calibrations/calibrationdata/: cal.yml  ost.ini  ost.yaml
calibration_gui/calibration_gui/launch/: Sick LD-MRS400001.launch  Velodyne_VLP16.launch
calibration_gui/calibration_gui/src/: gui_calibration_node.cpp  gui_supportedsensors.cpp  kinect.cpp  point_grey_camera.cpp  sick_lms151.cpp  velodyne_vlp16.cpp  visualization_rviz_ldmrs.cpp  visualization_rviz_velodyne.cpp
colormap/src/: colormap.cpp
dependencies/colormap/: .gitignore  CMakeLists.txt  package.xml
image_labeling/: CMakeLists.txt  package.xml
image_labeling/calibration_data/28/: ldmrs.txt
image_labeling/calibration_data/28_2/: ldmrs.txt  lms151_D.txt
image_labeling/calibration_data/LMS_Ref/: ldmrs_1.pcd  lms151_1.pcd  lms151_1_ldmrs_1_calib.txt  lms151_2.pcd
image_labeling/calibration_data/Last/: lms151_D.txt
image_labeling/calibration_data/Velodyne/: vlp16_1_ldmrs_1_calib.txt
image_labeling/calibration_data/last_ok/: ldmrs.txt  lms151_D.txt
image_labeling/calibration_data/less_old/: lms151_D.txt
image_labeling/calibration_data/old/: lms151_D.txt  lms151_E.txt
image_labeling/config/: big_image.rviz  image_only.rviz  rviz.rviz  rviz_2.rviz  visao.rviz
image_labeling/include/image_labeling/: device_frame_publisher.h  free_space_detection.h
image_labeling/launch/: drivers.launch  export.launch  get_data.launch  get_data_camera_only.launch  playback.launch  robotmodel.launch
image_labeling/src/: device_frame_publisher.cpp  free_space_detection.cpp
image_labeling/urdf/: atlas2.urdf
launch/: drivers.launch
ua_thesis/: examp2le.bbl  example.acn  example.acr  example.alg  example.aux  example.bbl  example.bcf  example.blg  example.glg  example.glsdefs  example.ist  example.lof  example.lol  example.lot  example.out  example.run.xml  example.tex  example.toc  example_fig.eps  glossary.aux  glossary.tex  library.bib  uaLogoNew.eps  uaLogoOld.eps  uaThesis.sty
ua_thesis/capappendices/: capappendices.tex
ua_thesis/capcalib/: cap3calib.aux  capcalib.aux  capcalib.tex  caplabel.aux
ua_thesis/capexp/: cap2hard.aux  capexp.aux  capexp.tex  caphard.aux
ua_thesis/capintro/: cap1intro.aux  capintro.aux  capintro.tex
ua_thesis/caplabel/: caplabel.aux  caplabel.tex
ua_thesis/capresults/: caplabel.aux  capresults.aux  capresults.tex
ua_thesis/capstate/: capstate.aux  capstate.tex
ua_thesis/capxconcl/: capxconcl.aux  capxconcl.tex
(+260 files in other folders)
